<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_worldwide"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_country"
        android:icon="@drawable/ic_country"
        android:title="@string/title_country" />

    <item
        android:id="@+id/navigation_news"
        android:icon="@drawable/ic_news"
        android:title="@string/title_news" />

    <item
        android:id="@+id/navigation_advice"
        android:icon="@drawable/ic_advice"
        android:title="@string/title_advice" />
    <item
        android:id="@+id/navigation_about"
        android:icon="@drawable/ic_about"
        android:title="@string/about" />

</menu>