<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AdviceFragment"
    android:background="@drawable/rounded_item_row"
    >
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_advice"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimaryDark"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_advice"
            android:textColor="@color/textColorPrimary"
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            android:layout_gravity="center"
            />
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="56dp">

        <GridLayout xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:rowCount="6"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            android:layout_margin="4dp"
            android:paddingBottom="64dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp"
                android:layout_margin="4dp"
                android:background="@drawable/rounded_card_row"
                >
                <ImageView
                    android:layout_width="160dp"
                    android:layout_height="160dp"
                    android:src="@drawable/advice1"
                    android:paddingBottom="8dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/advice1_desc"
                    android:textSize="12sp"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"
                    android:gravity="center_horizontal"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp"
                android:layout_margin="4dp"
                android:background="@drawable/rounded_card_row"
                >
                <ImageView
                    android:layout_width="160dp"
                    android:layout_height="160dp"
                    android:src="@drawable/advice2"
                    android:paddingBottom="8dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/advice2_desc"
                    android:textSize="12sp"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"
                    android:gravity="center_horizontal"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp"
                android:layout_margin="4dp"
                android:background="@drawable/rounded_card_row"
                >
                <ImageView
                    android:layout_width="160dp"
                    android:layout_height="160dp"
                    android:src="@drawable/advice3"
                    android:paddingBottom="8dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/advice3_desc"
                    android:textSize="12sp"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"
                    android:gravity="center_horizontal"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp"
                android:layout_margin="4dp"
                android:background="@drawable/rounded_card_row"
                >
                <ImageView
                    android:layout_width="160dp"
                    android:layout_height="160dp"
                    android:src="@drawable/advice4"
                    android:paddingBottom="8dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/advice4_desc"
                    android:textSize="12sp"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"
                    android:gravity="center_horizontal"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp"
                android:layout_margin="4dp"
                android:background="@drawable/rounded_card_row"
                >
                <ImageView
                    android:layout_width="160dp"
                    android:layout_height="160dp"
                    android:src="@drawable/advice5"
                    android:paddingBottom="8dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/advice5_desc"
                    android:textColor="@color/colorPrimary"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp"
                android:layout_margin="4dp"
                android:background="@drawable/rounded_card_row"
                >
                <ImageView
                    android:layout_width="160dp"
                    android:layout_height="160dp"
                    android:src="@drawable/advice6"
                    android:paddingBottom="8dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/advice6_desc"
                    android:textSize="12sp"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"/>
            </LinearLayout>


        </GridLayout>


    </ScrollView>























<!--    <androidx.recyclerview.widget.RecyclerView-->
<!--        android:id="@+id/rv_advice_container"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        android:layout_below="@+id/countriesList"-->
<!--        android:layout_alignParentBottom="true"-->
<!--    />-->


</FrameLayout>