<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.WorldWideChartActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_chart"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimaryDark"
            app:navigationIcon="@drawable/ic_back"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_activity_world_wide_chart"
                android:textColor="@color/textColorPrimary"
                style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                android:layout_gravity="center"
                />
        </androidx.appcompat.widget.Toolbar>

        <LinearLayout
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:elevation="0dp"
            android:layout_marginHorizontal="8dp"
            android:orientation="vertical"
            >

            <!--    Date                -->
            <TextView
                android:id="@+id/textView_lastUpdate"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_marginRight="4dp"
                android:drawableStart="@drawable/ic_date_dark"
                android:drawableLeft="@drawable/ic_date_dark"
                android:drawablePadding="4dp"
                android:gravity="center_vertical"
                android:text="@string/lastUpdate"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:ignore="NestedWeights" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:text="Today's Recovered and Deaths Covid-19 Cases "
                android:textColor="@color/textColorSecondary"
                android:textSize="16dp"
                android:textStyle="bold"
                android:gravity="center"
                />
            <com.github.mikephil.charting.charts.PieChart
                android:id="@+id/pieChart"
                android:layout_width="match_parent"
                android:layout_height="316dp"
                android:padding="16dp"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:orientation="horizontal"
                android:gravity="center"
                >
                <View
                    android:layout_height="16dp"
                    android:layout_width="16dp"
                    android:background="@color/colorRecovered"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/totalrecovered"
                    android:textColor="@color/textColorSecondaryLight"
                    android:gravity="center_vertical"
                    android:padding="8dp"
                    android:layout_marginRight="16dp"
                    />
                <View
                    android:layout_height="16dp"
                    android:layout_width="16dp"
                    android:background="@color/colorDeathsLight"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/totaldeaths"
                    android:textColor="@color/textColorSecondaryLight"
                    android:gravity="center_vertical"
                    android:padding="8dp"
                    />


            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</ScrollView>