<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/textColorPrimary"
    tools:context=".ui.HomeFragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="56dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">



            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="256dp"
            android:orientation="vertical"
            android:layout_marginBottom="8dp"
            android:background="@drawable/special_extended"
            android:scaleType = "centerCrop"

                >

                <!--            ToolBar-->
                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar_home"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title_home"
                        android:textColor="@color/textColorPrimary"
                        style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                        android:layout_gravity="center"
                        android:drawableRight="@drawable/ic_chart"
                        android:drawablePadding="4dp"
                        />
                </androidx.appcompat.widget.Toolbar>

                <!-- Date & Chart Button  -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_gravity="center"
                    android:orientation="horizontal"
                    android:layout_margin="8dp"
                    >

                    <!--    Date                -->
                    <TextView
                        android:id="@+id/textView_lastUpdate"
                        android:layout_width="0dp"
                        android:layout_height="48dp"
                        android:layout_marginRight="4dp"
                        android:layout_weight="0.6"
                        android:drawableStart="@drawable/ic_date"
                        android:drawableLeft="@drawable/ic_date"
                        android:drawablePadding="4dp"
                        android:gravity="center_vertical"
                        android:text="@string/lastUpdate"
                        android:textColor="@color/textColorPrimary"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        tools:ignore="NestedWeights" />

                    <Button
                        android:id="@+id/btn_stats"
                        android:layout_width="0dp"
                        android:minWidth="64dp"
                        android:layout_height="48dp"
                        android:layout_weight="0.3"
                        android:textAllCaps="false"
                        android:background="@drawable/rounded_button_selector"
                        android:drawableStart="@drawable/ic_chart"
                        android:drawableLeft="@drawable/ic_chart"
                        android:elevation="6dp"
                        android:gravity="center_vertical"
                        android:paddingHorizontal="12dp"
                        android:text="Chart"
                        android:textColor="@color/textColorPrimary"
                        android:textSize="16dp"
                        android:textStyle="bold"
                        android:drawablePadding="8dp"
                        />


                </LinearLayout>

                <!--   WorldWide Stats Container         -->
                <LinearLayout
                    android:id="@+id/globalStats"
                    android:layout_width="match_parent"
                    android:layout_height="128dp"
                    android:orientation="horizontal"
                    android:layout_marginHorizontal="8dp"
                    >

                    <!--      Total Cases Container -->
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="120dp"
                        android:layout_marginRight="8dp"
                        android:layout_weight="1"
                        android:background="@drawable/rounded_card_row"
                        android:orientation="vertical"
                        android:paddingHorizontal="8dp"
                        android:paddingVertical="4dp"
                        android:elevation="4dp"
                        >

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="0.2"
                            android:gravity="center"
                            android:text="@string/total_confirmed"
                            android:textColor="@color/colorConfirmed"
                            android:textSize="14sp"
                            android:textStyle="bold"
                            android:background="@drawable/rounded_confirmed_card"
                            />

                        <TextView
                            android:id="@+id/textView_WorldWide_TotalConfirmed"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="0.4"
                            android:gravity="center"
                            android:textColor="@color/colorConfirmed"
                            android:textStyle="bold"
                            android:textSize="20sp"
                            />

                        <TextView
                            android:id="@+id/textView_WorldWide_NewConfirmed"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="0.3"
                            android:gravity="center"
                            android:textColor="@color/colorConfirmed"
                            android:textStyle="bold"
                            android:textSize="14sp"
                            />

                    </LinearLayout>
                    <!--     Recovered Cases Container       -->
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="120dp"
                        android:layout_marginRight="8dp"
                        android:layout_weight="1"
                        android:background="@drawable/rounded_card_row"
                        android:orientation="vertical"
                        android:paddingHorizontal="8dp"
                        android:paddingVertical="4dp"
                        android:elevation="4dp"
                        >

                        <TextView
                            android:text="@string/totalrecovered"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="0.2"
                            android:gravity="center"
                            android:textColor="@color/colorRecovered"
                            android:textSize="14sp"
                            android:textStyle="bold"
                            android:background="@drawable/rounded_recovered_card"

                            />

                        <TextView
                            android:id="@+id/textView_WorldWide_TotalRecovered"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="0.4"
                            android:gravity="center"
                            android:textColor="@color/colorRecovered"
                            android:textStyle="bold"
                            android:textSize="20sp"
                            />

                        <TextView
                            android:id="@+id/textView_WorldWide_NewRecovered"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="0.3"
                            android:gravity="center"
                            android:textColor="@color/colorRecovered"
                            android:textStyle="bold"
                            android:textSize="14sp"
                            />
                    </LinearLayout>
                    <!--     New Cases Container       -->
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="120dp"
                        android:layout_weight="1"
                        android:background="@drawable/rounded_card_row"
                        android:orientation="vertical"
                        android:paddingHorizontal="8dp"
                        android:paddingVertical="4dp"
                        android:elevation="4dp"
                        >

                        <TextView
                            android:text="@string/totaldeaths"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="0.2"
                            android:gravity="center"
                            android:textColor="@color/colorDeathsLight"
                            android:textSize="14sp"
                            android:textStyle="bold"
                            android:background="@drawable/rounded_death_card"
                            />

                        <TextView
                            android:id="@+id/textView_WorldWide_TotalDeaths"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="0.4"
                            android:gravity="center"
                            android:textColor="@color/colorDeathsLight"
                            android:textStyle="bold"
                            android:textSize="20sp"
                            />

                        <TextView
                            android:id="@+id/textView_WorldWide_NewDeaths"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="0.3"
                            android:gravity="center"
                            android:textColor="@color/colorDeathsLight"
                            android:textStyle="bold"
                            android:textSize="14sp"
                            />
                    </LinearLayout>

                </LinearLayout>


            </LinearLayout>












            <!--    Fragment Container -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="8dp"
                android:layout_weight="1">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <!--    CardView Header -->

                    <LinearLayout
                        android:id="@+id/countriesList"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentLeft="true"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/special_rounded_card_row"
                        android:padding="8dp">

                        <!--        Country Name    -->
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="0.4"

                            android:gravity="center_vertical"
                            android:text="@string/title_country"
                            android:textColor="@color/textColorPrimary"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <!--            Confirmed       -->
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="0.2"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:gravity="center_horizontal"
                                android:text="Confirmed"
                                android:textColor="@color/textColorPrimary"

                                android:textSize="14sp"
                                android:textStyle="bold" />

                        </LinearLayout>

                        <!--            Recovered       -->
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="0.2"
                            android:gravity="center"
                            android:orientation="vertical">


                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text="Recovered"
                                android:textColor="@color/textColorPrimary"
                                android:textSize="14sp"
                                android:textStyle="bold" />

                        </LinearLayout>

                        <!--            Deaths -->
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="0.2"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text="Deaths"
                                android:textColor="@color/textColorPrimary"
                                android:textSize="14sp"
                                android:textStyle="bold" />


                        </LinearLayout>


                    </LinearLayout>
                    <!--    CardView Container   -->
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_home_container"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_below="@+id/countriesList"
                        android:layout_alignParentBottom="true"
                        android:layout_marginTop="2dp"
                        android:layout_marginBottom="4dp"
                        />
                </RelativeLayout>
            </LinearLayout>


        </LinearLayout>




    </ScrollView>
</FrameLayout>
